# mullvad-discord-rpc

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
